mule-user-guide/v/3.3/enabling-ws-security.adoc
= Enabling WS-Security

*_Enterprise_*

When a Web service exposes private-network data to the outside world, that data travels through 4 - 7 separate protocol layers (see: http://en.wikipedia.org/wiki/TCP/IP_model[TCP/IP] or http://en.wikipedia.org/wiki/OSI_model[OSI]) thus introducing potential security vulnerabilities. Implementing security at a higher layer on the protocol stack — the application layer, for instance — generally provides better protection than an implementation at the lower transport layer, which provides only HTTPS security.

To implement application-layer security, enable http://msdn.microsoft.com/en-us/library/ms977327.aspx[WS-security] (a http://cxf.apache.org/[CXF] configuration) on your Web service. WS-security defines a new SOAP header which is capable of carrying various security tokens that systems use to identify a Web service caller's identity and privileges, and can include the following:

* encryption
* digital signature
* time stamp

You can also add custom link:/docs/display/33X/Enabling+WS-Security#EnablingWS-Security-AddingaTokenValidator[*Token Validators*] to the SOAP Component.

== Enabling WS-Security

To enable WS-security on a CXF Web service in your application, you must add WS-configurations to the *SOAP Component* in your flow. This approach enables WS-security locally within your flow, for one Web service only.

To the Mule flow that involves a Web service, add a link:/docs/display/33X/SOAP+Component+Reference[*SOAP Component*] to publish, consume, or proxy a Web service. Complete the following steps to configure WS-security on the SOAP component.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Open the *Pattern Properties* panel, then click *Security* tab.
+
image:/docs/download/attachments/122751457/security.png?version=1&modificationDate=1366752705169[image]

. Click the image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[plus] icon in the *Add Configuration Element* pane to create a new key-value pair.
+
image:/docs/download/attachments/122751457/key_value_pair.png?version=1&modificationDate=1366752779620[image]
+
[NOTE]
In XML, this step mirrors the addition of a key-value pair inside the ws-config child element of a ws-security element. By adding configuration elements to your SOAP component, you are creating a map of key-value pairs that correspond to the CXF WSS4J security-configuration text strings in http://people.apache.org/~coheigea/stage/wss4j/1.5.5/site/apidocs/org/apache/ws/security/handler/WSHandlerConstants.html[WSHandlerConstants] and http://people.apache.org/~coheigea/stage/wss4j/1.5.5/site/apidocs/org/apache/ws/security/WSConstants.html[WSConstants].

. Enter a key, such as `action`, in the open *Key* field and press *Enter*
. Double-click the new key-value line item you created to open the *Add Configuration Property* panel.
+
image:/docs/download/thumbnails/122751457/add_config.png?version=1&modificationDate=1366751919575[image]

. Enter information in either the *Value* field _OR_ the *Value Reference Field* according to the table below.
+
image:/docs/download/thumbnails/122751457/add_keyvalue.png?version=1&modificationDate=1366756192740[image]
+
[width="99",cols="10s,85"]
|===
|Value |Enter a http://people.apache.org/~coheigea/stage/wss4j/1.5.5/site/apidocs/org/apache/ws/security/WSConstants.html[WS Constant] (a class to define the kind of access the server allows) or a http://people.apache.org/~coheigea/stage/wss4j/1.5.5/site/apidocs/org/apache/ws/security/handler/WSHandlerConstants.html[WSHandlerConstant] (a class to specify the names, actions, and other strings for data deployment of the WSS handler). For example, enter UsernameToken in the value field.
|Value Reference |Enter the bean that the key must reference. When the key must reference a bean (for instance, when the key is `passwordCallbackRef`), enter the name of the bean in the *Value Reference* field.
|===

. Click *Finish* to save the key-value pair.
. Repeat the steps above to add as many ws-security configurations as you wish to your Web service, then click *OK* to save your configurations.
....
[tab,title="Studio XML Editor or Standalone"]
....
. To your CXF element (i.e. SOAP component), add a child element for http://cxfws-security/[cxf:ws-security].
. Within the http://cxfws-security/[cxf:ws-security] child element, add a child element for http://cxfws-config/[cxf:ws-config].
. Within the http://cxfws-config/[cxf:ws-config] child element, add a child element for http://cxfproperty/[cxf:property].
. Add two attributes to the http://cxfproperty/[cxf:property] child element according to the table below. Be sure to enter either a `*value*`_OR_ a `*value-ref*`; the two are mutually exclusive.
+
[width="99",cols="10s,85"]
|===
|key |Specify a name for the property.
|value |Specify a http://people.apache.org/~coheigea/stage/wss4j/1.5.5/site/apidocs/org/apache/ws/security/WSConstants.html[WS Constant] (a class to define the kind of access the server allows) or a http://people.apache.org/~coheigea/stage/wss4j/1.5.5/site/apidocs/org/apache/ws/security/handler/WSHandlerConstants.html[WSHandlerConstant] (a class to specify the names, actions, and other strings for data deployment of the WSS handler). For example, enter `UsernameToken` in the value field.
|value-ref |Specify the bean that the key must reference. When the key must reference a bean (for instance, when the key is `passwordCallbackRef`), specify the name of the bean as the value-ref.
|===

. Repeat the preceding step to add as many WS-security configurations as you wish to your Web service. Refer to sample code below
+
View the Namespace

////
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
////

[source, xml]
----
<flow name="Creation1Flow1" doc:name="Creation1Flow1">
    <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>
    <cxf:jaxws-service doc:name="SOAP">
        <cxf:ws-security>
            <cxf:ws-config>
                <cxf:property key="action" value="UsernameToken"/>
            </cxf:ws-config>
        </cxf:ws-security>
    </cxf:jaxws-service>
</flow>
----
....
------

== Adding a Token Validator

If you have enabled WS-Security on your Web service in Mule, you can further configure the SOAP component to delegate authentication of the message credentials it transmits or receives.

A SOAP component may get bogged down with the tasks of both processing and authenticating messages. To lighten this load, you can instruct WS-security to delegate certain message authentication tasks to a *Token Validator*, including:

* validating the UsernameToken in cases where the `CallbackHandler` implementation does not have access to the password
* validating the attributes of a received SAML assertion
* dispatching a received security token to a third-party security service for validation

Complete the following procedure to add token validators to your Web service.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. In the *Security* tab of your SOAP component, click one or more of the check boxes to delegate message authentication tasks to token validators. Refer to the table below for the activity of each token validator.
+
image:/docs/download/attachments/122751457/token_validators.png?version=1&modificationDate=1366751919883[image]
+
[width="99",cols="10s,85",options="header"]
|===
|Token Validator |Purpose
|Username |Authenticates the username and password credentials associated with each message in a manner similar to HTTP Digest authentication.
|http://en.wikipedia.org/wiki/SAML_1.1[SAML 1] |Checks messages against SAML 1.1 assertion statements in order to approve or reject access to the Web service.
|http://en.wikipedia.org/wiki/SAML_2.0[SAML 2] |Checks messages against SAML 2.0 assertion statements in order to approve or reject access to the Web service.
|Timestamp |Examines the timeliness of messages – when they were created and received, and when they expire – to make decisions about which messages to process.
|Signature |Examines the digital signature attached to messages to make decisions about which messages to process.
|Binary Security Token |Examines binary encoded security tokens (such as Kerberos) to make decisions about which messages to process.
|===

. In the *Bean* field associated with the token validator you have selected, use the drop-down menu to select an existing bean that your token validator will reference to apply, replace, or extend the default behavior associated with a specific security token.
+
[TIP]
If you have not yet created any beans, click the image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[plus] button to open a new properties panel in which you can create and configure a new bean. The bean imports the Java class you have built to specify the custom validator's override behavior.
+
image:/docs/download/attachments/122751457/token_validators_selected.png?version=1&modificationDate=1366751919910[image]
+
View Java code for Bean Creation

////
[source, java]
----
public class UsernameTokenTestValidator implements Validator
{
 
    @Override
    public Credential validate(Credential credential, RequestData data) throws WSSecurityException
    {
        UsernameToken usernameToken = credential.getUsernametoken();
 
        if(!"secret".equals(usernameToken.getPassword()))
        {
            throw new WSSecurityException(WSSecurityException.FAILED_AUTHENTICATION);
        }
 
        return credential;
    }
}
----
////

. Click *OK* to save changes.
....
[tab,title="Studio XML Editor or Standalone"]
....
. Above all flows in your Mule project, create a global `http://springbean/[spring:bean]` element to import the Java class you have built to specify the token validator's behavior. Refer to code sample below.
+
View Java code for Bean Creation

////
[source, java]
----
public class UsernameTokenTestValidator implements Validator
{
 
    @Override
    public Credential validate(Credential credential, RequestData data) throws WSSecurityException
    {
        UsernameToken usernameToken = credential.getUsernametoken();
 
        if(!"secret".equals(usernameToken.getPassword()))
        {
            throw new WSSecurityException(WSSecurityException.FAILED_AUTHENTICATION);
        }
 
        return credential;
    }
}
----
////

. To the CXF element in your flow, add a child element (below any http://cxfws-config/[cxf:ws-config] elements you may have added) for `http://cxfws-custom-validator/[cxf:ws-custom-validator]`.
. To the `http://cxfws-custom-validator/[cxf:ws-custom-validator]` child element, add a child element according to the type of action you want the validator to perform. Refer to the table below.
+
[width="99",cols="20s,75",options="header"]
|===
|Token Validator |Purpose
|http://cxfusername-token-validator/[cxf:username-token-validator] |Authenticates the username and password credentials associated with each message in a manner similar to HTTP Digest authentication.
|http://cxfsaml1-token-validator/[cxf:saml1-token-validator] |Checks messages against http://en.wikipedia.org/wiki/SAML_1.1[SAML 1.1] assertion statements in order to approve or reject access to the Web service.
|http://cxfsaml2-token-validator/[cxf:saml2-token-validator] |Checks messages against [http://en.wikipedia.org/wiki/SAML_2.0SAML 2.0] assertion statements in order to approve or reject access to the Web service.
|http://cxftimestamp-token-validator/[cxf:timestamp-token-validator] |Examines the timeliness of messages – when they were created and received, and when they expire – to make decisions about which messages to process.
|http://cxfsignature-token-validator/[cxf:signature-token-validator] |Examines the digital signature attached to messages to make decisions about which messages to process.
|http://cxfbst-token-validator/[cxf:bst-token-validator] |Examines binary encoded security tokens (such as Kerberos) to make decisions about which messages to process.
|===

. Add a `*ref*` attribute to the validator to reference the global http://springbean/[spring:bean] element which imports the Java class.
+
View the Namespace

////
[source, xml]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----
////

[source, xml]
----
<spring:beans>
    <spring:bean id="customTokenValidator" name="Bean" class="org.mule.example.myClass"/>
</spring:beans>
     
 
<flow name="Creation1Flow1" doc:name="Creation1Flow1">
    <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>
    <cxf:jaxws-service doc:name="SOAP">
        <cxf:ws-security>
            <cxf:ws-config>
                <cxf:property key="action" value="UsernameToken"/>
            </cxf:ws-config>
            <cxf:ws-custom-validator>
                <cxf:username-token-validator ref="Bean"/>
            </cxf:ws-custom-validator>
        </cxf:ws-security>
    </cxf:jaxws-service>
</flow>
----
....
------

== Complete Code Example

View the Namespace

////
[source, xml]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----
////

View Example Code

////
[source, xml]
----
<spring:beans>
 
        <spring:bean id="Bean" name="samlCustomValidator" class="com.mulesoft.mule.example.security.SAMLCustomValidator"/>
 
    </spring:beans>
 
 
 
 
    <flow name="UnsecureServiceFlow" doc:name="UnsecureServiceFlow">
 
        <http:inbound-endpoint address="http://localhost:63081/services/unsecure" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
 
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Unsecure service"/>
 
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service" />
 
    </flow>
 
 
 
 
    <flow name="UsernameTokenServiceFlow" doc:name="UsernameTokenServiceFlow">
 
        <http:inbound-endpoint address="http://localhost:63081/services/username" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
 
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken service">
 
            <cxf:ws-security>
 
                <cxf:ws-config>
 
                    <cxf:property key="action" value="UsernameToken Timestamp"/>
 
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
 
                </cxf:ws-config>
 
            </cxf:ws-security>
 
        </cxf:jaxws-service>
 
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
 
    </flow>
 
     
 
    <flow name="UsernameTokenSignedServiceFlow" doc:name="UsernameTokenSignedServiceFlow">
 
        <http:inbound-endpoint address="http://localhost:63081/services/signed" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
 
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Signed service">
 
            <cxf:ws-security>
 
                <cxf:ws-config>
 
                    <cxf:property key="action" value="UsernameToken Signature Timestamp"/>
 
                    <cxf:property key="signaturePropFile" value="wssecurity.properties"/>
 
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
 
                </cxf:ws-config>
 
            </cxf:ws-security>
 
        </cxf:jaxws-service>
 
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
 
    </flow>
 
     
 
    <flow name="UsernameTokenEncryptedServiceFlow" doc:name="UsernameTokenEncryptedServiceFlow">
 
        <http:inbound-endpoint address="http://localhost:63081/services/encrypted" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
 
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure UsernameToken Encrypted service">
 
            <cxf:ws-security>
 
                <cxf:ws-config>
 
                    <cxf:property key="action" value="UsernameToken Timestamp Encrypt"/>
 
                    <cxf:property key="decryptionPropFile" value="wssecurity.properties"/>
 
                    <cxf:property key="passwordCallbackClass" value="com.mulesoft.mule.example.security.PasswordCallback"/>
 
                </cxf:ws-config>
 
            </cxf:ws-security>
 
        </cxf:jaxws-service>
 
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
 
    </flow>
 
     
 
    <flow name="SamlTokenServiceFlow" doc:name="SamlTokenServiceFlow">
 
        <http:inbound-endpoint address="http://localhost:63081/services/saml" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
 
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken service">
 
            <cxf:ws-security>
 
                <cxf:ws-config>
 
                    <cxf:property key="action" value="SAMLTokenUnsigned Timestamp"/>
 
                </cxf:ws-config>
 
                <cxf:ws-custom-validator>
 
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
 
                </cxf:ws-custom-validator>
 
            </cxf:ws-security>
 
        </cxf:jaxws-service>
 
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
 
    </flow>
 
 
 
 
    <flow name="SignedSamlTokenServiceFlow" doc:name="SignedSamlTokenServiceFlow">
 
        <http:inbound-endpoint address="http://localhost:63081/services/signedsaml" exchange-pattern="request-response" doc:name="HTTP Inbound Endpoint"/>
 
        <cxf:jaxws-service serviceClass="com.mulesoft.mule.example.security.Greeter" doc:name="Secure SAMLToken Signed service">
 
            <cxf:ws-security>
 
                <cxf:ws-config>
 
                    <cxf:property key="action" value="SAMLTokenUnsigned Signature"/>
 
                    <cxf:property key="signaturePropFile" value="wssecurity.properties" />
 
                </cxf:ws-config>
 
                <cxf:ws-custom-validator>
 
                    <cxf:saml2-token-validator ref="samlCustomValidator"/>
 
                </cxf:ws-custom-validator>
 
            </cxf:ws-security>
 
        </cxf:jaxws-service>
 
        <component class="com.mulesoft.mule.example.security.GreeterService" doc:name="Greeter Service"/>
 
    </flow>
----
////

== See Also

* Learn more about configuring a link:/docs/display/33X/SOAP+Component+Reference[SOAP component] in your Mule application.
* Review the link:/docs/display/current/SOAP+Web+Service+Security+Example[Mule example application] which demonstrates the use of WS-security.
* Review a link:/documentation/display/current/XML-only+SOAP+Web+Service+Example[Mule example application] which demonstrates a SOAP Web service.
